# hack

./: CMakeLists.txt
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
resources/: Ping.idl
server/: CMakeLists.txt
server/src/: server.cpp
subscriber/src/: subscriber.cpp
